--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p> Powered by<a href="https://github.com/sujaykundu777/devlopr-jekyll"> devlopr jekyll</a>. Hosted with <a href="https://pages.github.com">Github Pages</a>. Subscribe via
+    <p> Join the Discord <a href="https//discord.gg/FEzMPT4">Click Me!</a> | Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
     </p>
 </footer>
