--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,7 +21,7 @@
 <!-- home hero section -->
 <div class="jumbotron">
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
-  <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+  <p class="jumbotron-heading">The Second Server Network</p>
 
   <p class="lead" id="typewriteText"></p>
   <span>
@@ -30,10 +30,10 @@
   </span>
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
-    <a href="{{site.url}}{{site.baseurl}}/get-started">
-      <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
+    <a href="{{site.url}}{{site.baseurl}}/servers">
+      <button class="btn btn-md btn-warning"> <strong>Play Now!</strong> </button>
     </a>
-    <a id="olvy-target">
+    <a href="{{site.url}}{{site.baseurl}}/news">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
      </a>
   </div>
