--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="row justify-content-center" id="blog-post-container">
   <div class="col-lg-10">
-    {%- include blog_post_article.html -%}
-     {%- include blog_post_comments.html-%}
+    {%- include news_post_article.html -%}
+     {%- include news_post_comments.html-%}
   </div>
 </div>
 <div class="row">
@@ -13,7 +13,7 @@ layout: default
     <div class="card">
       <div class="card-header">Categories</div>
       <div class="card-body text-dark">
-        {%- include blog_categories.html -%}
+        {%- include news_categories.html -%}
       </div>
     </div>
   </div>
