--- a/_includes/news_sidebar.html
+++ b/_includes/news_sidebar.html
@@ -3,13 +3,13 @@
     <div class="card">
         <div class="card-header">Categories </div>
         <div class="card-body text-dark">
-            {%- include blog_categories.html -%}
+            {%- include news_categories.html -%}
         </div>
     </div>
     <div class="card">
         <div class="card-header">Authors </div>
             <div class="card-body text-dark">
-                {%- include blog_authors.html -%}
+                {%- include news_authors.html -%}
             </div>
       </div>
 </div>
